objects/Case.object
<CustomObject>
    <fields>
        <fullName>Close_Type__c</fullName>
        <label>Close Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request - Global access setup, bulk email approval, website changes/updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Issue- settings were updated/changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue - customer did not know how to use the system</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_Vendor_1__c</fullName>
        <label>Comments Vendor 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Vendor_2__c</fullName>
        <label>Comments Vendor 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Vendor_3__c</fullName>
        <label>Comments Vendor 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Age__c</fullName>
        <description>Haystak field used to determine time lag sending to compliance</description>
        <formula>Date_Sent_To_Compliance__c - Date_Ready_For_Compliance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Notes__c</fullName>
        <description>CR-0015339 - Compliance tracking for Haystak.</description>
        <label>Compliance Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Notification_Email_Address__c</fullName>
        <inlineHelpText>used to send the case contact email notifications when the case is escalated</inlineHelpText>
        <label>Contact Notification Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Day__c</fullName>
        <formula>CASE( MOD(DATEVALUE(CreatedDate)  - DATE(1900, 1, 7), 7),
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;,
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Type__c</fullName>
        <description>Haystak field to define creative work needed on a case</description>
        <label>Creative Type</label>
        <picklist>
            <picklistValues>
                <fullName>​Billable - New Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable - Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable - Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable - Included</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This box is enabled by default and is a flag to support contacting the customer is requred</description>
        <inlineHelpText>This check box is a notification to Support contacting the customer is required. By un-checking this box you are acknowledging the customer does NOT need to be contacted regarding the status of this case.</inlineHelpText>
        <label>Customer Contact Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <inlineHelpText>This field is for portal users to notate the priority of their Case</inlineHelpText>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DI_Last_Activity_Date__c</fullName>
        <description>Updated by Workflow.  The last time the status was changed to Escalate, Unresolved, Resolved, Additional Information Needed, Submitting Additional Information, or Resolved-Pending Customer Approval.</description>
        <label>DI Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMS_Config_Type__c</fullName>
        <description>Formula</description>
        <formula>Account.DMS_Config_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Config Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <description>Updateed by worflow for Haystak to track when a ticket was assigned out.</description>
        <inlineHelpText>Date this Ticket was assigned out</inlineHelpText>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_to_QC_Age__c</fullName>
        <description>Used by Haystak to determine if a ticket is late</description>
        <formula>IF( IsClosed = False, Today()- Date_Due_to_QC__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Due to QC Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Due_to_QC__c</fullName>
        <description>haystak - updated by the system when the case runner &quot;Send to Qa&quot; is created</description>
        <inlineHelpText>haystak - updated by the system when the case runner &quot;Send to Qa&quot; is created</inlineHelpText>
        <label>Date Due to QC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Escalated_L3_web__c</fullName>
        <inlineHelpText>this field is updated by workflow whenever a case runner is created for any L3 Web Queue</inlineHelpText>
        <label>Date Escalated L3 Web</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Escalated__c</fullName>
        <inlineHelpText>updated by workflow when the escalation case runner is created and saved</inlineHelpText>
        <label>Date Escalated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Escalated_to_Implementation__c</fullName>
        <description>Updated by a workflow rule. When Escalated_To__c &apos;implementation, start counting the date</description>
        <label>Date Escalated to Implementation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Feed_Came_In__c</fullName>
        <description>Used by Haystak.</description>
        <inlineHelpText>The date the feed from Homenet first arrives at Haystak.</inlineHelpText>
        <label>Date Feed Came In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Info_Requested__c</fullName>
        <inlineHelpText>updated by workflow when the case runner button &quot;Request More Info&quot; is submitted</inlineHelpText>
        <label>Date Info Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Info_Submitted__c</fullName>
        <inlineHelpText>updated by workflow when the case runner button &quot;Submit more Info&quot; created and saved</inlineHelpText>
        <label>Date Info Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Out_of_Dev__c</fullName>
        <inlineHelpText>The date that this Case was last pushed out of Development.</inlineHelpText>
        <label>Date Out of Dev</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <description>Date that the Post to Website case runner was used and set to Posted.</description>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ready_For_Compliance__c</fullName>
        <description>Haystak field to track when a Ready for Compliance Case runner was created. This field is set a workflow rule and should only update on the first RFC Case Runner.</description>
        <inlineHelpText>Updated by the system when the first RFC Case Runner is created.</inlineHelpText>
        <label>Date Ready For Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ready_to_Post__c</fullName>
        <description>Date that the Post to Website case runner was used and set to Ready to Post.</description>
        <label>Date Ready to Post</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Redirected__c</fullName>
        <description>The last date that a Redirect case runner was created on this Case. (This only applies to Redirect case runners created after 5/10/2014.)</description>
        <inlineHelpText>The last date that a Redirect case runner was created on this Case. (This only applies to Redirect case runners created after 5/10/2014.)</inlineHelpText>
        <label>Date Redirected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rejected__c</fullName>
        <label>Date Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved_L3_Web__c</fullName>
        <inlineHelpText>field is updated by workflow whenever a resolve case runner is created by an L3 Web Support user- used for reporting, not on the page layout</inlineHelpText>
        <label>Date Resolved L3 Web</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <inlineHelpText>updated by workflow when the resolve case runner is created and saved</inlineHelpText>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ret_d_to_Support__c</fullName>
        <label>Date Ret&apos;d to Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_To_Compliance__c</fullName>
        <description>Haystak filed to track when a ticket was last sent to compliance. This field updates every time a case is sent out for compliance.</description>
        <inlineHelpText>Updated by the system every time a case is sent to compliance.</inlineHelpText>
        <label>Date Sent To Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Integralink__c</fullName>
        <label>Date Sent to Integralink</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Unresolved__c</fullName>
        <label>Date Unresolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_QC__c</fullName>
        <inlineHelpText>haystak - updated by the system when the case runner &quot;Send to Qa&quot; is created</inlineHelpText>
        <label>Date to QC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_to_Resolve_not_Level_1__c</fullName>
        <formula>Date_Resolved__c - Date_Escalated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for cases escalated outside Level 1 - days between Date Escalated to Date Resolved</inlineHelpText>
        <label>Day to Resolve (not Level 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_to_Resolve_not_Level_1_no_weekend__c</fullName>
        <formula>CASE(MOD( Date_Escalated__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Date_Resolved__c - Date_Escalated__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Date_Resolved__c - Date_Escalated__c )/7)*5)
-1 /* adding -1 to accommodate the way SF inherently calculates aging; the math here makes the equation come out one higher, so the -1 offsets it */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day to Resolve (not Level 1, no weekend)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(IsClosed,
ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Dev__c</fullName>
        <formula>ABS(CASE ( Escalation_Queue__c, &quot;Development&quot;, (Date_Escalated__c - TODAY()),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that checks to see if the Escalation queue equals Development, if so, it calculates the days between the date the Case was escalated and today</inlineHelpText>
        <label>Days in Dev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Implementation__c</fullName>
        <formula>ABS(CASE ( Escalation_Queue__c, &quot;Implementation&quot;, IF( Date_Resolved__c   &lt; TODAY(),Date_Resolved__c  -  Date_Escalated_to_Implementation__c,  Date_Escalated__c  - TODAY()),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that checks to see if the Escalation queue equals Implementation if so, it calculates the days between the date the Case was escalated and today</inlineHelpText>
        <label>Days in Implementation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Website_Support__c</fullName>
        <formula>IF(
AND(CONTAINS(Escalation_Queue__c, &quot;L3-WEB&quot;),  ISNULL(Date_Escalated__c)),
      Today()- Date_Escalated_L3_web__c, Today()-Date_Escalated__c
      
   )</formula>
        <inlineHelpText>if escalation queue contains L3-Web then subtract the date escalated from Today</inlineHelpText>
        <label>Days in Website Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Escalate_to_Web_Support__c</fullName>
        <description>If a Case is escalated to web support, then this field shows number of days it took.</description>
        <formula>IF(
   CONTAINS(TEXT(Escalate_To__c), &quot;L3-Web&quot;), 
   Date_Created__c - Date_Escalated__c,
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If a Case is escalated to web support, then this field shows number of days it took.</inlineHelpText>
        <label>Days to Escalate to Web Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolve__c</fullName>
        <formula>Date_Resolved__c -   Date_Created__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for Level 1 Support Only - takes the Date Resolved less the date created</inlineHelpText>
        <label>Days to Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolve_by_L3_Web__c</fullName>
        <formula>Date_Resolved__c   -  Date_Escalated_L3_web__c</formula>
        <label>Days to Resolve by L3 Web</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Advocate__c</fullName>
        <formula>Account.Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vin PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Issue_Description__c</fullName>
        <description>Internal Use Only</description>
        <inlineHelpText>Internal Use Only</inlineHelpText>
        <label>Dealer Issue Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Issue__c</fullName>
        <label>Dealer Issue</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Status__c</fullName>
        <inlineHelpText>Used by our Performance Management teams and the dealer to update VCR Cases</inlineHelpText>
        <label>Dealer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Still an Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved-No Longer an Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Supported Function</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Time__c</fullName>
        <formula>Account.Dealer_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_VS_ID__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer VS ID#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Website__c</fullName>
        <formula>HYPERLINK( if(CONTAINS(Account.Website, &quot;http://&quot;), Account.Website, &quot;http://&quot;&amp;Account.Website) ,Account.Website)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealers_Impacted__c</fullName>
        <label>Dealers Impacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Link__c</fullName>
        <description>This field is used for reporting to provide a link for support team to outside defect bug in Visual Studio</description>
        <formula>HYPERLINK(&quot;http://sdbvtfspr-mts01:8080/tfs/VinSolutionsCollection/VinSolutions/_workitems#_a=edit&amp;id=&quot; + Defect__c, &quot;Defect Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defect Logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect Id #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Preview__c</fullName>
        <label>Description Preview</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Age__c</fullName>
        <formula>Today()- Last_Date_Modified_by_TFS__c</formula>
        <inlineHelpText># of days since the last time the Dev State was updated</inlineHelpText>
        <label>Dev Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Assignment__c</fullName>
        <label>Dev Assignment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Priority_Formula__c</fullName>
        <formula>Dev_Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dev Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Priority__c</fullName>
        <label>Dev Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_State__c</fullName>
        <inlineHelpText>updated by the TFS Program (used by Development)</inlineHelpText>
        <label>Dev State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Status__c</fullName>
        <label>Dev Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Age__c</fullName>
        <formula>IF( IsClosed = False, Today()- Due_Date__c , NULL)</formula>
        <inlineHelpText>used for Haystak reporting</inlineHelpText>
        <label>Due Date Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>used for forms</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENZO_Related_Issue__c</fullName>
        <description>This field is to track the number of ENZO related calls/emails that our customer support team receives.</description>
        <inlineHelpText>Pick ‘Yes’ for any questions/issues regarding our new billing system, invoices, payment methods, etc.</inlineHelpText>
        <label>ENZO Related Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ETC_for_DRT__c</fullName>
        <description>Used by Support to contain their estimate on when a given item will be ready for the dealer.</description>
        <label>ETC for DRT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate_To__c</fullName>
        <label>Escalate To</label>
        <picklist>
            <picklistValues>
                <fullName>App Request Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Setup Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Support Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Creative Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Paid Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - SEO Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY - Tech Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jira Request Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1-Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-CRM Admin/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Escalations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2-Phone System(PBX)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Development_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who escalated this case to development.</description>
        <inlineHelpText>records the persons name who created the case runner to escalate to Level 3</inlineHelpText>
        <label>Escalated to L3 by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Age__c</fullName>
        <formula>IF(
 AND( IsClosed = False, ISBLANK(Date_Escalated_L3_web__c)),
Today()- Date_Escalated__c ,  Today()-Date_Escalated_L3_web__c)</formula>
        <label>Escalation Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Queue__c</fullName>
        <formula>text(  Escalate_To__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field is auto populated when the case runner escalate is picked</inlineHelpText>
        <label>Escalation Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this field is updated by a workflow rule</inlineHelpText>
        <label>Escalation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Type__c</fullName>
        <label>Escalation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Resolution_Date__c</fullName>
        <inlineHelpText>Pushed from TFS.</inlineHelpText>
        <label>Estimated Date to QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Release_Date__c</fullName>
        <description>Pushed from TFS. This is the date the developers expect this fix to be released to production.</description>
        <inlineHelpText>Pushed from TFS. This is the date the developers expect this fix to be released to production.</inlineHelpText>
        <label>Expected Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ext_Comments__c</fullName>
        <inlineHelpText>Closing Public notes sent to case contact at site</inlineHelpText>
        <label>External Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NOT USED, DELETE</description>
        <inlineHelpText>Shows the supervisor that this Case needs to be re-ranked, DELETE WHEN first Priority</inlineHelpText>
        <label>Flag for Higher Ranking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Approval_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature Request Approval Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Approval_VPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature Request Approval VPM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Ranking__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>Manually set by Jim Nelson as a marker of priority on Feature Requests.</inlineHelpText>
        <label>Feature Request Ranking</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_request_ID__c</fullName>
        <label>Feature request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_request_logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature request logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_URL_posted__c</fullName>
        <label>Final URL posted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_Age__c</fullName>
        <formula>(First_Contact__c - CreatedDate)*24.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Contact Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <inlineHelpText>updated by a trigger when the first Outgoing phone call or email is created</inlineHelpText>
        <label>First Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag_for_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to flag the Case as a duplicate and close the Case</inlineHelpText>
        <label>Flag for Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by Support Team when case needing Manager intervention</inlineHelpText>
        <label>Flag for Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_Wrangler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Manager Escalation System. Lets Queue Lead know to work this.</description>
        <label>Flag for Queue Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_High__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces a Case to have the highest severity value in TFS. (via formula)</description>
        <inlineHelpText>Forces a Case to have the highest severity value in TFS.</inlineHelpText>
        <label>Force Highest Severity</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>